# CIExplorer

./: .gitignore  README.md
auto/: analyze.py  auto_mining.py  auto_packing.py  auto_sim.sh  common.py  config.py
src/cost_model/: CMakeLists.txt  config_broadwell.yml  cost_model.cpp  cost_model.h  ino.yml  ooo2.yml  ooo4.yml  packing.cpp  packing.h  test.cpp  yaml_parser.cpp  yaml_parser.h
src/flix/: CMakeLists.txt  flix.cpp
src/galgo/: Argument.hpp  Chromosome.hpp  Evolution.hpp  Galgo.hpp  GeneticAlgorithm.hpp  Parameter.hpp  Population.hpp  Randomize.hpp
src/gspan/: attrs.output  regular.output  run.sh
src/gspan/gspan_mining/: graph.py  gspan.py  main.py
src/gspan/gspan_mining.egg-info/: PKG-INFO
src/merge/: CMakeLists.txt  graph.cpp  graph.h  merge.cpp
src/mining/: CMakeLists.txt  PatternManager.cpp  PatternManager.h  extract_seed.cpp  genetic.cpp  get_cp_ops.cpp  graph.cpp  graph.h  llvm.h  maps.h  mia.cpp  parse_novia_output.cpp  parse_novia_output_sep.cpp  rm_data_ops.cpp  search.cpp  split_bb.cpp  split_bb_ino.cpp  utils.cpp  utils.h  visualize.cpp
src/parse_power_area/: CMakeLists.txt  parse_power_area.cpp  parse_power_area_needle.cpp
src/passes/: CMakeLists.txt  dfg_pass.cpp  graph.cpp  graph.h  inliner.cpp  instrument_pass.cpp  prepare_pass.cpp
