cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
project(PatternMining LANGUAGES C CXX)
set(EXECUTABLE_OUTPUT_PATH "/root/nio/patt_mining/bin/executables")

find_package(OpenMP)

find_package(LLVM 14 REQUIRED CONFIG)
add_compile_options(-O3)

find_package(yaml-cpp REQUIRED)

add_definitions(${LLVM_DEFINITIONS})
include_directories(${LLVM_INCLUDE_DIRS})
link_directories(${LLVM_LIBRARY_DIRS})

message(STATUS "Found LLVM version: ${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}")

add_library(graph SHARED graph.cpp)
add_library(pm PatternManager.cpp)
add_library(utils utils.cpp)
add_library(packing ../cost_model/packing.cpp)
add_library(cost_model ../cost_model/cost_model.cpp)
add_library(yaml_parser ../cost_model/yaml_parser.cpp)

add_executable(rmdataops rm_data_ops.cpp)
add_executable(search search.cpp)
add_executable(genetic genetic.cpp)
add_executable(split_bb split_bb.cpp)
add_executable(split_bb_ino split_bb_ino.cpp)
add_executable(mia mia.cpp)
# add_executable(maxclique maxclique.cpp)
add_executable(visualize visualize.cpp)
add_executable(get_cp_ops get_cp_ops.cpp)
add_executable(extract_seed extract_seed.cpp)
add_executable(parse_novia_output parse_novia_output.cpp)
add_executable(parse_novia_output_sep parse_novia_output_sep.cpp)

target_link_libraries(rmdataops graph pm utils)
# target_link_libraries(search graph pm utils packing cost_model yaml_parser OpenMP::OpenMP_CXX)
target_link_libraries(search graph pm utils packing cost_model yaml_parser)
target_link_libraries(genetic graph pm utils packing cost_model yaml_parser)
target_link_libraries(mia graph pm utils)
# target_link_libraries(maxclique graph pm utils cost_model)
target_link_libraries(visualize graph pm utils)
target_link_libraries(get_cp_ops graph pm utils cost_model)
target_link_libraries(extract_seed graph pm utils cost_model)

llvm_map_components_to_libnames(llvm_libs support core irreader)
target_link_libraries(graph ${llvm_libs})
target_link_libraries(pm ${llvm_libs})
target_link_libraries(packing ${llvm_libs})
target_link_libraries(cost_model ${llvm_libs} pm graph yaml_parser)
target_link_libraries(parse_novia_output pm graph utils cost_model)
target_link_libraries(parse_novia_output_sep pm graph utils cost_model)
target_link_libraries(split_bb graph pm utils cost_model ${llvm_libs} packing)
target_link_libraries(split_bb_ino graph pm utils cost_model ${llvm_libs} packing)

target_link_libraries(yaml_parser yaml-cpp)
